--- a/wordcamcolombo-2017.css
+++ b/wordcamcolombo-2017.css
@@ -1529,7 +1529,7 @@ select[name=tix_payment_method] {
 }
 
 .home,.home #masthead,.home #page {
-	height: 100%;
+	height: 90%;
 }
 
 .home #masthead {
@@ -1538,21 +1538,21 @@ select[name=tix_payment_method] {
 
 .home #masthead hgroup {
 	height: 100%;
-	background: url('https://europe.wordcamp.org/2016/files/2015/11/home-illustration-mobile.png') center bottom no-repeat, url('https://europe.wordcamp.org/2016/files/2015/11/home-illustration-scenery-mobile.png') center bottom repeat-x fixed #eef2f2;
-	background-size: auto, auto;
+	background: url('https://2017.colombo.wordcamp.org/files/2017/02/background.png') center bottom no-repeat;
+	background-size: cover;
 }
 
 @media only screen and (-webkit-min-device-pixel-ratio:2),only screen and (min-resolution:192dpi),only screen and (min-resolution:2dppx) {
 	.home #masthead hgroup {
-		background: url('https://europe.wordcamp.org/2016/files/2015/11/home-illustration-mobile@2x.png') center bottom no-repeat, url('https://europe.wordcamp.org/2016/files/2015/11/home-illustration-scenery-mobile@2x.png') center bottom repeat-x fixed #eef2f2;
-		background-size: 640px 560px, 640px 560px;
+		background: url('https://2017.colombo.wordcamp.org/files/2017/02/background.png') center bottom no-repeat;
+		background-size: cover;
 	}
 }
 
 @media only screen and (max-width:720px) and (orientation:landscape),only screen and (max-width:720px) and (orientation:landscape) and (-webkit-min-device-pixel-ratio:2),only screen and (max-width:720px) and (orientation:landscape) and (min-resolution:192dpi),only screen and (max-width:720px) and (orientation:landscape) and (min-resolution:2dppx) {
 	.home #masthead hgroup {
-		background: url('https://europe.wordcamp.org/2016/files/2015/11/illustration-scenery@2x.png') center 100% repeat-x fixed #eef2f2;
-		background-size: 1183px 271px;
+		background: url('https://2017.colombo.wordcamp.org/files/2017/02/background.png') center 100% no-repeat fixed #eef2f2;
+		background-size: cover;
 	}
 }
 
@@ -1562,20 +1562,20 @@ select[name=tix_payment_method] {
 	}
 	
 	.home #masthead hgroup {
-		background: url('https://europe.wordcamp.org/2016/files/2015/11/home-illustration.png') center bottom no-repeat, url('https://europe.wordcamp.org/2016/files/2015/11/home-illustration-scenery.png') center bottom repeat-x fixed #eef2f2;
-		background-size: auto, auto;
+		background: url('https://2017.colombo.wordcamp.org/files/2017/02/background.png') center bottom no-repeat;
+		background-size: cover;
 	}
 }
 
 @media only screen and (min-width:600px) and (-webkit-min-device-pixel-ratio:2),only screen and (min-width:600px) and (min-resolution:192dpi),only screen and (min-width:600px) and (min-resolution:2dppx) {
 	.home #masthead hgroup {
-		background: url('https://europe.wordcamp.org/2016/files/2015/11/home-illustration@2x.png') center bottom no-repeat, url('https://europe.wordcamp.org/2016/files/2015/11/home-illustration-scenery@2x.png') center bottom repeat-x fixed #eef2f2;
-		background-size: 1183px 560px, 1183px 560px;
+		background: url('https://2017.colombo.wordcamp.org/files/2017/02/background.png') center bottom no-repeat;
+		background-size: cover;
 	}
 }
 
 .admin-bar.home #masthead {
-	height: calc(100% - 32px);
+	height: calc(90% - 32px);
 }
 
 @media screen and (max-width:782px) {
