--- a/wordcamcolombo-2017.css
+++ b/wordcamcolombo-2017.css
@@ -234,6 +234,10 @@ input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-sea
     -webkit-appearance: none;
 }
 
+.tix-column-quantity select{
+        border: 1px solid #c33;
+}
+
 fieldset {
     margin: 0 2px;
     padding: .35em .625em .75em;
