--- a/wordcamcolombo-2017.css
+++ b/wordcamcolombo-2017.css
@@ -4976,8 +4976,10 @@ select[name=tix_payment_method] {
     }
 }
 
-.wcb_widget_sponsors .sponsor-level.micro {
-    display: none;
+.wcb_widget_sponsors .sponsor-level.in-kind img {
+    display: block;
+    max-width:120px;
+    margin: 1em auto;
 }
 
 #footer-widgets .social-media {
